--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myvitereact",
-   "homepage": "https://username.github.io/repo_name",
+   "homepage": "https://echelon1.github.io/myvitereact",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -28,4 +28,9 @@
     "globals": "^16.0.0",
     "vite": "^6.3.1"
   }
+   "scripts": {    
+    "predeploy": "npm run build",    
+    "deploy": "gh-pages -d dist", 
+  }
+
 }
