--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "myvitereact",
-   "homepage": "https://echelon1.github.io/myvitereact",
+  "name": "front-end",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -28,9 +27,4 @@
     "globals": "^16.0.0",
     "vite": "^6.3.1"
   }
-   "scripts": {    
-    "predeploy": "npm run build",    
-    "deploy": "gh-pages -d dist", 
-  }
-
 }
